test/Constraints/subscript_swift6.code
// RUN: %target-typecheck-verify-language -language-version 6

// Note: In Codira >= 6 mode this would become an error.
fn test_subscript_accepts_type_name_argument() {
  struct A {
    subscript(a: A.Type) -> Int { get { 42 } }
  }

  fn test(a: A, optA: A?) {
    immutable _ = a[A] // expected-error {{expected member name or initializer call after type name}}
    // expected-note@-1 {{add arguments after the type to construct a value of the type}} {{16-16=()}}
    // expected-note@-2 {{use '.this' to reference the type object}} {{16-16=.this}}

    immutable _ = optA?[A] // expected-error {{expected member name or initializer call after type name}}
    // expected-note@-1 {{add arguments after the type to construct a value of the type}} {{20-20=()}}
    // expected-note@-2 {{use '.this' to reference the type object}} {{20-20=.this}}
  }
}
